; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Logging.c_NewEraser.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Logging.c_NewEraser.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i32, i32, i64, i32* }
%struct.TYPE_7__ = type { i32 }

@MAX_PATH = common dso_local global i32 0, align 4
@DISK_FREE_SPACE_DEFAULT_WINDOWS = common dso_local global i64 0, align 8
@DISK_FREE_SPACE_DEFAULT = common dso_local global i64 0, align 8
@DISK_FREE_SPACE_MIN = common dso_local global i64 0, align 8
@EraserThread = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_6__* @NewEraser(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_6__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  %8 = load i32, i32* @MAX_PATH, align 4
  %9 = zext i32 %8 to i64
  %10 = call i8* @llvm.stacksave()
  store i8* %10, i8** %6, align 8
  %11 = alloca i8, i64 %9, align 16
  store i64 %9, i64* %7, align 8
  %12 = load i64, i64* %4, align 8
  %13 = icmp eq i64 %12, 0
  br i1 %13, label %14, label %25

14:                                               ; preds = %2
  %15 = call %struct.TYPE_7__* (...) @GetOsInfo()
  %16 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i64 @OS_IS_WINDOWS(i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %14
  %21 = load i64, i64* @DISK_FREE_SPACE_DEFAULT_WINDOWS, align 8
  store i64 %21, i64* %4, align 8
  br label %24

22:                                               ; preds = %14
  %23 = load i64, i64* @DISK_FREE_SPACE_DEFAULT, align 8
  store i64 %23, i64* %4, align 8
  br label %24

24:                                               ; preds = %22, %20
  br label %25

25:                                               ; preds = %24, %2
  %26 = load i64, i64* %4, align 8
  %27 = load i64, i64* @DISK_FREE_SPACE_MIN, align 8
  %28 = icmp slt i64 %26, %27
  br i1 %28, label %29, label %31

29:                                               ; preds = %25
  %30 = load i64, i64* @DISK_FREE_SPACE_MIN, align 8
  store i64 %30, i64* %4, align 8
  br label %31

31:                                               ; preds = %29, %25
  %32 = call %struct.TYPE_6__* @ZeroMalloc(i32 32)
  store %struct.TYPE_6__* %32, %struct.TYPE_6__** %5, align 8
  %33 = trunc i64 %9 to i32
  %34 = call i32 @GetExeDir(i8* %11, i32 %33)
  %35 = load i32*, i32** %3, align 8
  %36 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %37 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %36, i32 0, i32 4
  store i32* %35, i32** %37, align 8
  %38 = load i64, i64* %4, align 8
  %39 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %40 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %39, i32 0, i32 3
  store i64 %38, i64* %40, align 8
  %41 = call i32 @CopyStr(i8* %11)
  %42 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %43 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %42, i32 0, i32 2
  store i32 %41, i32* %43, align 8
  %44 = call i32 (...) @NewEvent()
  %45 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %46 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %45, i32 0, i32 1
  store i32 %44, i32* %46, align 4
  %47 = load i32, i32* @EraserThread, align 4
  %48 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %49 = call i32 @NewThread(i32 %47, %struct.TYPE_6__* %48)
  %50 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %51 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %50, i32 0, i32 0
  store i32 %49, i32* %51, align 8
  %52 = load %struct.TYPE_6__*, %struct.TYPE_6__** %5, align 8
  %53 = load i8*, i8** %6, align 8
  call void @llvm.stackrestore(i8* %53)
  ret %struct.TYPE_6__* %52
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i64 @OS_IS_WINDOWS(i32) #2

declare dso_local %struct.TYPE_7__* @GetOsInfo(...) #2

declare dso_local %struct.TYPE_6__* @ZeroMalloc(i32) #2

declare dso_local i32 @GetExeDir(i8*, i32) #2

declare dso_local i32 @CopyStr(i8*) #2

declare dso_local i32 @NewEvent(...) #2

declare dso_local i32 @NewThread(i32, %struct.TYPE_6__*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
